<resources>
    <string name="app_name">Book Listing</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="currency">Currency</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="desc">Book Preview</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="books_not_found">No books Found</string>
</resources>